fix label centering so tooltips dont overlap incorrectly. thanks @1earch

--- a/appserver/static/visualizations/flow_map_viz/visualization.css
+++ b/appserver/static/visualizations/flow_map_viz/visualization.css
@@ -76,9 +76,10 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+.flow_map_viz-setwidth {
     width: 200px;
 }
-
 
 
 
